--- a/index.html
+++ b/index.html
@@ -1,19 +1,50 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="shortcut icon" href="./img/favicon/favicon (10).ico" type="image/x-icon">
-    <title></title>
-    <link rel="stylesheet" href="./css/style.css">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="./img/favicon/favicon (10).ico" type="image/x-icon">
+  
+  <title></title>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
 
+  <nav class="nav">
+    <div class="container">
+      <div class="nav__row">
 
+        <div class="nav__row-logo">
+          <img class="logo__img" src="./image/nav/Logo.png" alt="logo">
+        </div>
 
-<script src="js/main.js"></script>
-<br><br><br>
+        <div class="nav__row-info">
+
+          <div class="row-info__top">
+            <img class="info__top-img" src="./image/nav/phone-img.png" alt="phone-img">
+            <span class="top__span">Express Delivery</span>
+            <a class="top__num" href="tel:+1234567890">+1 (234) 567-89-10</a>
+          </div><!--row-info__top-->
+
+          <div class="row-info__bottom">
+            <ul class="nav__menu">
+              <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+              <li class="nav__item"><a href="#" class="nav__link">Menu</a></li>
+              <li class="nav__item"><a href="#" class="nav__link">Our Story</a></li>
+              <li class="nav__item"><a href="#" class="nav__link">Contact Us</a></li>
+            </ul>
+          </div>
+        </div><!--nav__row-info-->
+
+      </div>
+    </div>
+  </nav>
+
+  <script src="js/main.js"></script>
+  <br><br><br>
 </body>
+
 </html>
