--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="./img/favicon/favicon (10).ico" type="image/x-icon">
-  
+
   <title></title>
   <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -26,7 +26,7 @@
           <div class="row-info__top">
             <img class="info__top-img" src="./image/nav/phone-img.png" alt="phone-img">
             <span class="top__span">Express Delivery</span>
-            <a class="top__num" href="tel:+1234567890">+1 (234) 567-89-10</a>
+            <a class="top__num" href="tel:+1234567890">+1 234-567-89-10</a>
           </div><!--row-info__top-->
 
           <div class="row-info__bottom">
@@ -39,9 +39,40 @@
           </div>
         </div><!--nav__row-info-->
 
-      </div>
-    </div>
+      </div><!--nav__row-->
+    </div><!--container-->
   </nav>
+
+  <header class="header">
+    <div class="container">
+      <div class="header__row" style="background-image: url('./image/header/bg.jpg');">
+
+        <div class="header__info">
+          <div class="header__subtitle">It is a good time for the great taste of burgers</div>
+          <img class="sub-retangle" src="./image/header/subtitle-rectangle.png" alt="restangle">
+          <h1 class="header__title">Burger</h1>
+          <div class="header__suptitle">Week</div>
+        </div><!--header__info-->
+
+        <div class="header-img">
+          <img class="header__img" src="./image/header/burger.png" alt="burger">
+          <img class="ellipse__img" src="./image/header/ellipse.png" alt="ellipse">
+          <div class="burger-price">
+            $5
+            <span class="price__num">.49</span>
+            <div>
+            <span class="price__txt">only</span>
+            </div>
+          </div>
+        </div>
+
+
+      </div><!--header__row-->
+    </div><!--container-->
+  </header>
+
+
+
 
   <script src="js/main.js"></script>
   <br><br><br>
