--- a/index.html
+++ b/index.html
@@ -56,14 +56,16 @@
 
         <div class="header-img">
           <img class="header__img" src="./image/header/burger.png" alt="burger">
-          <img class="ellipse__img" src="./image/header/ellipse.png" alt="ellipse">
-          <div class="burger-price">
-            $5
-            <span class="price__num">.49</span>
-            <div>
-            <span class="price__txt">only</span>
-            </div>
-          </div>
+          <div class="ellipse-img">
+            <img class="ellipse__img" src="./image/header/ellipse.png" alt="ellipse">
+            <div class="burger-price">
+              $5
+              <span class="price__num">.49</span>
+              <div>
+                <span class="price__txt">only</span>
+              </div>
+            </div><!--burger-price-->
+          </div><!--ellipse-img-->
         </div>
 
 
