--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
             <a class="top__num" href="tel:+1234567890">+1 234-567-89-10</a>
           </div><!--row-info__top-->
 
+          <div class="burger-btn">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+
           <div class="row-info__bottom">
             <ul class="nav__menu">
               <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
