--- a/index.html
+++ b/index.html
@@ -79,6 +79,25 @@
     </div><!--container-->
   </header>
 
+  <section class="burgers">
+    <div class="container">
+      <div class="burger__content">
+        <h2 class="visually-hidden">NAME OF BURGERS</h2>
+        <div class="burger__row">
+          <div class="burger-most">
+            <img class="most-img" src="./image/burgers/most-popular.jpg" alt="most">
+          </div>
+          <div class="burgers-others">
+            <img class="more-img" src="./image/burgers/more-taste.jpg" alt="more">
+
+            <img class="fresh-img" src="./image/burgers/fresh-chili.jpg" alt="fresh">
+          </div>
+        </div>
+        </h2>
+      </div>
+    </div>
+  </section>
+
 
 
 
