--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="./img/favicon/favicon (10).ico" type="image/x-icon">
- <link rel="stylesheet" href="./swiper-bundle.css">
+  <link rel="stylesheet" href="./swiper-bundle.css">
   <link rel="stylesheet" href="./css/style.css">
   <title>BURGER</title>
 
@@ -195,18 +195,55 @@
             </div><!--discover-txt-->
           </div><!--discover-row__info-->
 
-            <div class="swiper">
-              <!-- Additional required wrapper -->
-              <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide"><img src="./image/discover/06.png" alt="06"></div>
-                <div class="swiper-slide"><img src="./image/discover/05.png" alt="05"></div>
-                <div class="swiper-slide"><img src="./image/discover/04.jpg" alt="08"></div>
-              </div>
-            </div><!--swiper-->
-       
+          <div class="swiper">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide"><img src="./image/discover/06.png" alt="06"></div>
+              <div class="swiper-slide"><img src="./image/discover/05.png" alt="05"></div>
+              <div class="swiper-slide"><img src="./image/discover/04.jpg" alt="08"></div>
+            </div>
+          </div><!--swiper-->
+
         </div><!--discover-row-->
       </div><!--discover__content-->
+    </div><!--container-->
+  </section>
+
+  <section class="reservation">
+    <div class="container">
+      <div class="reservation__content">
+        <div class="reservation-top">
+          <div class="content-suptitle">
+            <h3 class="reservation__content-suptitle">RESERVATION</h3>
+          </div>
+          <div class="content-title">
+            <h2 class="reservation__content-title">BOOK YOUR TABLE</h2>
+          </div>
+        </div><!--reservation-top-->
+        <img class="burger__img" src="./image/reservation/burger.png" alt="burger">
+        <img class="bottle__img" src="./image/reservation/bottle.png" alt="bottle">
+        <img class="assorted__img" src="./image/reservation/pic11.png" alt="pic11">
+
+        <form class="reservation-form" action="#" method="post">
+
+          <input class="input__name" type="text" name="name" placeholder="NAME">
+
+          <input class="input__email" type="text" name="email" placeholder="EMAIL">
+
+          <input class="input__data" type="text" name="data" placeholder="DATA">
+
+          <input class="input__time" type="text" name="time" placeholder="TIME">
+
+          <input class="input__people" type="text" name="people" placeholder="PEOPLE">
+
+          <input class="input__find" type="submit" value="FIND A TABLE" name="find">
+
+        </form>
+
+
+
+      </div><!--reservation__content-->
     </div><!--container-->
   </section>
 
