--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
         </div>
 
         <div class="nav__row-info">
-
           <div class="row-info__top">
             <img class="info__top-img" src="./image/nav/phone-img.png" alt="phone-img">
             <span class="top__span">Express Delivery</span>
@@ -45,7 +44,6 @@
             </ul>
           </div>
         </div><!--nav__row-info-->
-
       </div><!--nav__row-->
     </div><!--container-->
   </nav>
@@ -53,30 +51,20 @@
   <header class="header">
     <div class="container">
       <div class="header__row" style="background-image: url('./image/header/bg.jpg');">
+        <div class="header__row">
+          <div class="header__info">
+            <div class="header__subtitle">It is a good time for the great taste of burgers</div>
+            <img class="sub-retangle" src="./image/header/subtitle-rectangle.png" alt="restangle">
+            <h1 class="header__title">Burger</h1>
+            <div class="header__suptitle">Week</div>
+          </div><!--header__info-->
 
-        <div class="header__info">
-          <div class="header__subtitle">It is a good time for the great taste of burgers</div>
-          <img class="sub-retangle" src="./image/header/subtitle-rectangle.png" alt="restangle">
-          <h1 class="header__title">Burger</h1>
-          <div class="header__suptitle">Week</div>
-        </div><!--header__info-->
+          <div class="header-img">
+            <img src="./image/header/burger-1.png" alt="">
+          </div>
 
-        <div class="header-img">
-          <img class="header__img" src="./image/header/burger.png" alt="burger">
-          <div class="ellipse-img">
-            <img class="ellipse__img" src="./image/header/ellipse.png" alt="ellipse">
-            <div class="burger-price">
-              $5
-              <span class="price__num">.49</span>
-              <div>
-                <span class="price__txt">only</span>
-              </div>
-            </div><!--burger-price-->
-          </div><!--ellipse-img-->
-        </div>
-
-      </div><!--header__row-->
-    </div><!--container-->
+        </div><!--header__row-->
+      </div><!--container-->
   </header>
 
   <section class="burgers">
@@ -213,6 +201,7 @@
   <section class="reservation">
     <div class="container">
       <div class="reservation__content">
+
         <div class="reservation-top">
           <div class="content-suptitle">
             <h3 class="reservation__content-suptitle">RESERVATION</h3>
@@ -221,10 +210,10 @@
             <h2 class="reservation__content-title">BOOK YOUR TABLE</h2>
           </div>
         </div><!--reservation-top-->
+
         <img class="burger__img" src="./image/reservation/burger.png" alt="burger">
         <img class="bottle__img" src="./image/reservation/bottle.png" alt="bottle">
         <img class="assorted__img" src="./image/reservation/pic11.png" alt="pic11">
-
         <form class="reservation-form" action="#" method="post">
 
           <input class="input__name" type="text" name="name" placeholder="NAME">
@@ -240,16 +229,66 @@
           <input class="input__find" type="submit" value="FIND A TABLE" name="find">
 
         </form>
-
-
-
       </div><!--reservation__content-->
     </div><!--container-->
   </section>
 
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__content">
+        <div class="footer__row" style="background: url('./image/footer/footer-fon.jpg');">
+          <div class="footer-info">
+            <div class="footer-info">
+              <div class="footer-info__logo">
+                <img src="./image/footer/footer-logo.png" alt="footer-logo">
+              </div>
+              <div class="footer-info__txt">
+                <p class="info-text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                  dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viver ra maecenas accumsan
+                  lacus vel facilisis.
+                </p>
+              </div>
+              <div class="foooter-info__copyright">
+                <span class="span-txt">
+                  © Company Name 2020. All rights reserved.
+                </span>
+              </div>
+            </div>
+          </div><!--footer-info-->
 
+          <div class="footer-connection">
+            <div class="connection-info">
+              <div class="footer-connection__location">
+                <img class="location-img" src="./image/footer/Location.png" alt="location">
+                <span class="location-txt">MAIN rOAD, BUILDING NAME, COUNTRY</span>
+              </div>
+              <div class="footer-connection__post">
+                <img class="email-img" src="./image/footer/Email.png" alt="email__img">
+                <span class="email-txt">INFO@COMPANYNAME.COM</span>
+              </div>
+            </div><!--connection-info-->
 
-  <br><br><br>
+            <div class="footer-connection__social">
+              <div class="instagram">
+                <img src="./image/footer/Instagram.png" alt="intstagram">
+              </div>
+              <div class="facebook">
+                <img src="./image/footer/Facebook.png" alt="facebook">
+              </div>
+              <div class="twitter">
+                <img src="./image/footer/Twitter.png" alt="twitter">
+              </div>
+              <div class="whatsapp">
+                <img src="./image/footer/WhatsApp.png" alt="whatsapp">
+              </div>
+            </div>
+          </div><!--footer-connection-->
+        </div><!--footer__row-->
+      </div><!--footer__content-->
+    </div><!--container-->
+  </footer>
+
   <script src="./swiper-bundle.js"></script>
   <script src="js/main.js"></script>
 </body>
